2009-08-21  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcher.cs, EndpointDispatcher.cs :
	  moved some initialization code from ServiceHostBase, to start
	  reducing dependencies on ServiceHostBase.

2009-08-20  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcher.cs : handle unknown message in host event.

2009-08-17  Atsushi Enomoto  <atsushi@ximian.com>

	* EndpointDispatcher.cs : do not try to create wrong filter.

2009-08-14  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcher.cs : EndpointNotFoundException message could
	  be a bit kindful.

2009-08-11  Atsushi Enomoto  <atsushi@ximian.com>

	* IOperationInvoker.cs : fix interface.
	* DefaultOperationInvoker.cs : refresh implementation of the above.
	* BaseMessagesFormatter.cs, OperationInvokerHandler.cs :
	  dependent changes for above.

2009-08-07  Atsushi Enomoto  <atsushi@ximian.com>

	* InputOrReplyRequestProcessor.cs : now it could return an instance
	  of dynamically generated proxy over DuplexServiceRuntimeChannel.

2009-08-07  Atsushi Enomoto  <atsushi@ximian.com>

	* ClientRuntime.cs : oops, it should have been committed at a time.
	  Change .ctor() args. Make some properties auto.

2009-08-07  Atsushi Enomoto  <atsushi@ximian.com>

	* DispatchRuntime.cs : callback runtime is set later.

2009-08-06  Atsushi Enomoto  <atsushi@ximian.com>

	* ClientRuntime.cs :
	  .ctor() just needs contract. Fill some properties.

2009-08-04  Atsushi Enomoto  <atsushi@ximian.com>

	* ReplyHandler.cs : there is better way to check IsOneWay.

2009-08-04  Atsushi Enomoto  <atsushi@ximian.com>

	* OperationInvokerHandler.cs : One way operation has no reply.
	* ReplyHandler.cs : ditto.

2009-07-31  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcher.cs : raise error on multiple endpoint match
	  (documented at EndpointDispatcher.FilterPriority).

2009-07-28  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcher.cs : move Open() inside acceptor lock, so that